--- a/Problems/02validAnagram.ipynb
+++ b/Problems/02validAnagram.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53ff578a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
