--- a/Problems/03twoSum.ipynb
+++ b/Problems/03twoSum.ipynb
@@ -1,24 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b4412e4",
+   "cell_type": "markdown",
+   "id": "6cb6e414",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Two Sum(Easy)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e025f0bf",
+   "cell_type": "markdown",
+   "id": "61f44839",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Psuedocode \n",
-    "1. take "
+    "Psuedocode\n",
+    "\n",
+    "1. Take array nums first index int\n",
+    "2. Store the index location in a variable1\n",
+    "3. Traverse the array to add the item indexes value \n",
+    "4. if the value does not equal our target move onto the next index until full array is traversed\n",
+    "5. Remove the index from the array, repeat steps 2 to 4 \n",
+    "6. if the summed value does equal our target take the second index location and store in another variable2\n",
+    "7. return variable 1 and variable 2 in a list "
    ]
   },
   {
@@ -26,27 +29,24 @@
    "execution_count": null,
    "id": "d8262f3b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def twoSum(self, nums: List[int], target: int) -> List[int]:"
+    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "        for i in range(len(nums)):                          \n",
+    "            variable1 = i                                   \n",
+    "            for j in range(i + 1, len(nums)):               \n",
+    "                if nums[variable1] + nums[j] == target:     \n",
+    "                    variable2 = j                           \n",
+    "                    return [variable1, variable2]           \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
