Added problem set solution

--- a/Problems/01containsDuplicate.ipynb
+++ b/Problems/01containsDuplicate.ipynb
@@ -25,13 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
     "    def hasDuplicate(self, nums: List[int]) -> bool:\n",
     "        for i in range(len(nums)): \n",
     "            for j in range(i + 1, len(nums)):\n",
     "                if nums[i] == nums[j]:\n",
     "                    return True\n",
-    "            return False"
+    "        return False"
    ]
   }
  ],
