--- a/Problems/03twoSum.ipynb
+++ b/Problems/03twoSum.ipynb
@@ -42,6 +42,25 @@
     "                    variable2 = j                           \n",
     "                    return [variable1, variable2]           \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80cc3fc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
+    "        for i in range(len(nums)):\n",
+    "            variable1 = i\n",
+    "            for j in range(i + 1, len(nums)):\n",
+    "                if nums[variable1] + nums[j] == target:\n",
+    "                    variable2 = j\n",
+    "                    return [variable1, variable2]"
+   ]
   }
  ],
  "metadata": {
